# fastrack_nav

./: CMakeLists.txt  README.md  fastrack_local_planner_plugin.xml  package.xml
include/fastrack/: mat_reader.h
include/fastrack/control/: Q4D_control_bound.h  control_bound.h  scalar_bound_interval.h
include/fastrack/dynamics/: Q4D_rel_Q2D.h  dynamics.h  relative_dynamics.h
include/fastrack/state/: Q4D_rel_Q2D_state.h  relative_state.h
include/fastrack/utils/: matlab_file_reader.h  types.h  uncopyable.h
include/fastrack/value/: matlab_value_function.h  value_function.h
include/fastrack_nav/: fastrack_local_planner.h
launch/: simple.launch
launch/includes/: move_baseSafe.launch  robot.launch.xml
launch/includes/urdf/: kobuki.urdf.xacro  kobuki_standalone.urdf.xacro
param/: costmap_common_params.yaml
src/: fastrack_local_planner.cpp  inflation_radius_updater.cpp  mat_reader.cpp
